--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit
-matplotlib
-seaborn
-urlextract
-wordcloud
-pandas
-emoji
-textblob
-nltk
+streamlit==1.32.0
+pandas==2.1.4
+matplotlib==3.8.2
+seaborn==0.13.2
+wordcloud==1.9.3
+emoji==2.9.0
+nltk==3.8.1
+plotly==5.24.0
+urlextract==1.9.0
